# Loom

./: README.md  pyproject.toml
claudeloop/: cli.py  openclaw.py  paths.py  rud_task.py  tmux_util.py  web.py
claudeloop/skills/: AK_skills.md
claudeloop/skills/aris/: ARIS.md
claudeloop/web_static/: app.css  app.js  index.html
loom/: cli.py  paths.py  rud_task.py  web.py
loom/skills/: zhizhou_skills.md
loom/skills/aris/: ARIS.md
loom/web_static/: app.css  app.js  index.html
templates/: NOTE.md  NOTES.md  PLAN.md
tests/: test_rud_task.py
