[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeloop"
version = "0.2.0"
description = "Lightweight task console for Claude Code (interview + PLAN.md + NOTES.md)"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
claudeloop = "claudeloop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["claudeloop"]
